--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <h1 class="logo__title"><span>Mamma</span>Mia!</h1>
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
-        <div class="main-nav">
+        <div class="main-nav nav">
           <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
@@ -66,10 +66,10 @@
   <div id="pages">
     <section id="home">
       <div class="home-wrapper container">
-        <div class=page-header>
-          <div class="pages-links">
+        <div class="page-header">
+          <div class="pages-links nav">
             <div class="order">
-                <img src="images/assets/pizza-1.jpg">
+                <img src="images/assets/pizza-1.jpg" alt="order">
               <div class="element-body">
                 <a href="#order">
                   <h1>order online</h1>
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="booking">
-                <img src="images/assets/pizza-2.jpg">
+                <img src="images/assets/pizza-2.jpg" alt="booking">
                <div class="element-body">
                 <a href="#booking">
                   <h1>book a table</h1>
@@ -97,7 +97,7 @@
         <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": true, "prevNextButtons": false}'>
           <div class="carousel-cell">
             <div class="carousel-element">
-              <img src="images/assets/pizza-3.jpg">
+              <img src="images/assets/pizza-3.jpg" alt="foodphoto">
               <div class="opinion">
                 <h3>amazing service!</h3>
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales</span>
@@ -107,7 +107,7 @@
           </div>
           <div class="carousel-cell">
             <div class="carousel-element">
-              <img src="images/assets/pizza-4.jpg">
+              <img src="images/assets/pizza-4.jpg" alt="foodphoto">
               <div class="opinion">
                 <h3>amazing service!</h3>
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales</span>
@@ -117,7 +117,7 @@
           </div>
           <div class="carousel-cell">
             <div class="carousel-element">
-              <img src="images/assets/pizza-5.jpg">
+              <img src="images/assets/pizza-5.jpg" alt="foodphoto">
               <div class="opinion">
                 <h3>amazing service!</h3>
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales</span>
@@ -129,42 +129,42 @@
         <div class="gallery">
           <ul class="gallery-list">
             <li class="gallery-element">
-              <div class="photo"><img src="images/assets/pizza-4.jpg"></div>
+              <div class="photo"><img src="images/assets/pizza-4.jpg" alt="foodphoto"></div>
               <div class="icons">
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
               </div>
             </li>
             <li class="gallery-element">
-              <div class="photo"><img src="images/assets/pizza-5.jpg"></div>
+              <div class="photo"><img src="images/assets/pizza-5.jpg" alt="foodphoto"></div>
               <div class="icons">
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
               </div>
             </li>
             <li class="gallery-element">
-              <div class="photo"><img src="images/assets/pizza-6.jpg"></div>
+              <div class="photo"><img src="images/assets/pizza-6.jpg" alt="foodphoto"></div>
               <div class="icons">
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
               </div>
             </li>
             <li class="gallery-element">
-              <div class="photo"><img src="images/assets/pizza-7.jpg"></div>
+              <div class="photo"><img src="images/assets/pizza-7.jpg" alt="foodphoto"></div>
               <div class="icons">
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
               </div>
             </li>
             <li class="gallery-element">
-              <div class="photo"><img src="images/assets/pizza-8.jpg"></div>
+              <div class="photo"><img src="images/assets/pizza-8.jpg" alt="foodphoto"></div>
               <div class="icons">
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
               </div>
             </li>
             <li class="gallery-element">
-              <div class="photo"><img src="images/assets/pizza-9.jpg"></div>
+              <div class="photo"><img src="images/assets/pizza-9.jpg" alt="foodphoto"></div>
               <div class="icons">
                 <i class="fas fa-heart"></i>
                 <i class="fas fa-share-alt"></i>
